# 24.1_drf

./: pyproject.toml
config/: settings.py
materials/: models.py  urls.py  views.py
materials/migrations/: 0001_initial.py
users/: models.py
users/migrations/: 0001_initial.py
